Updated conditional tests